[package]
name = "bb8-gaussdb"
version = "0.1.0"
edition = "2024"
description = "Full-featured async (tokio-based) connection pool for GaussDB / openGauss (like r2d2)"
license = "MIT"
repository = "https://github.com/systemxlabs/bb8-gaussdb"

[features]
with-serde_json-1 = ["tokio-gaussdb/with-serde_json-1"]
with-chrono-0_4 = ["tokio-gaussdb/with-chrono-0_4"]
with-uuid-1 = ["tokio-gaussdb/with-uuid-1"]

[dependencies]
bb8 = "0.9"
tokio = { version = "1.0.0", features = ["rt"] }
tokio-gaussdb = "0.1"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
